Hide media object overlay overflow, fix ratings for IE

--- a/src/components/mediaObject/cdrMediaObject.pcss
+++ b/src/components/mediaObject/cdrMediaObject.pcss
@@ -38,6 +38,7 @@
   &--overlay {
     position: relative;
     height: 100%;
+    overflow: hidden;
 
     & > .cdr-media-object__figure {
       display: block;
