--- a/src/components/rating/cdrRating.pcss
+++ b/src/components/rating/cdrRating.pcss
@@ -37,6 +37,8 @@
   &__ratings {
     display: flex;
     position: absolute;
+    top: 0;
+    left: 0;
   }
 
   &__background {
